--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,15 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
+Google fonts
     -->
+    <link rel="preload" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="preload" as="style"  onload="this.onload=null;this.rel='stylesheet'">
+
+
+
+<!-- end of google fonts -->
     <title>Peskales's Clinic</title>
   </head>
   <body dir="ltr">
