--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!--
 Google fonts
     -->
-    <link rel="preload" href="https://fonts.googleapis.com">
+    <link rel="preload" href="https://fonts.googleapis.com" as="style"  onload="this.onload=null;this.rel='stylesheet'">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="preload" as="style"  onload="this.onload=null;this.rel='stylesheet'">
 
