--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Peskales' physcial Therapy Clinic Website"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/peskalesMan.avif" />
 
     <!-- version control -->
-    <script type="text/javascript" src="index1.js?3"></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,14 +22,14 @@
     <!--
 Google fonts
     -->
-    <link rel="preload" href="https://fonts.googleapis.com" as="style"  onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preconnect" href="https://fonts.googleapis.com"  >
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="preload" as="style"  onload="this.onload=null;this.rel='stylesheet'">
+<link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="preconnect" >
 
-<link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<link href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap" rel="preconnect">
 
 <!-- end of google fonts -->
-    <title>Peskales's Clinic</title>
+    <title>Peskales Clinic</title>
   </head>
   <body dir="ltr">
     <noscript>You need to enable JavaScript to run this app.</noscript>
